--- a/public/styles/style3.css
+++ b/public/styles/style3.css
@@ -484,14 +484,20 @@ nav{
 }
 
 .mapContainer{
+  margin-top: 20px;
+  /* padding: 10px; */
   width: 100%;
   height: 500px;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  
 }
 
 .question-sec{
-  width: 40%;
+  background-color: #c0ded9;
+  padding-top: 10px;
+  width: 30%;
   height: 100%;
   /* background-color: #1b9bff; */
 }
