ready to deploy

--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles/style3.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js"></script>
-    <title>Document</title>
+    <title>Anna University colledges</title>
    
 </head>
 <body>
