--- a/views/new.ejs
+++ b/views/new.ejs
@@ -76,7 +76,7 @@
            <option value="CAD/CAM (ME)">CAD/CAM (ME)</option>
            <option value="Plastic Technology(M.TECH)">Plastic Technology(M.TECH)</option>
            <option value="Electrical and Electronics Engineering">Electrical and Electronics Engineering</option>
-           <option value="Electronics and Communication Engineering">Engineering</option>
+           <option value="Electronics and Communication Engineering">Electronics and Communication Engineering</option>
            <option value="Industrial Engineering">Industrial Engineering</option>
            <option value="Mechanical Engineering">Mechanical Engineering</option>
            <option value="Manufacturing Engineering">Manufacturing Engineering</option>
