--- a/public/styles/style3.css
+++ b/public/styles/style3.css
@@ -73,7 +73,7 @@ nav{
       display: block;
       color: black;
     }
-    ul{
+    .ul-header{
       position: fixed;
       width: 100%;
       height: 100vh;
@@ -167,25 +167,22 @@ nav{
     justify-content: center;
 }
 .container-show{
+  margin-top: 40px;
   width: 100%;
   display: flex;
-  flex-direction: row;
-  margin-top: 80px;
+  flex-direction: column;
   justify-content: space-around;
 }
 
 .show-clg{
-  color: white;
   padding: 10px;
-  width:60%;
+  width:100%;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(to right bottom, rgba(126,213,111,0.8), rgba(40,180,133,0.8))
 }
 
 .star-box{
-  width: 30%;
-  /* height: 100px; */
+  width: 100%;
 }
 
 .star-box textarea,.star-box label{
@@ -232,15 +229,12 @@ nav{
 }
 
 .show-clg-body p{
-  border: 1px solid green;
-  padding: 0.5rem;
-  border-radius: 1000px;
+  padding:2px 4px;
   width: 57%;
 }
 
 .btn-box{
   width: 60%;
-  margin-left: 32px;
   display: flex;
   flex-direction: column;
 }
@@ -309,6 +303,9 @@ nav{
   .alert-success span,.alert-fail span{
     top: 12px;
   }
+  .container-show {
+    margin-top: 0;
+  }
 }
 
 
@@ -334,26 +331,9 @@ nav{
 }
 
 
-
-/* slideshow */
-
-/* .show-clg-head{ */
-  /* margin: 10px; */
-  /* background: white;
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-  border-radius: 10px; */
- 
-/* } */
-
 .slideshow-container {
   position: relative;
   margin: auto;
-  /* background: white; */
   width: 100%;
   display: flex;
   justify-content: center;
@@ -485,20 +465,18 @@ nav{
 
 .mapContainer{
   margin-top: 20px;
-  /* padding: 10px; */
   width: 100%;
-  height: 500px;
+  /* height: 500px; */
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   
 }
 
 .question-sec{
+  margin-top: 40px;
   padding-top: 10px;
-  width: 30%;
-  height: 100%;
-  /* background-color: #1b9bff; */
+  width: 100%;
 }
 
 .question-sec label,.question-sec textarea{
@@ -528,7 +506,8 @@ nav{
 .question-ans{
   margin-left: 10px;
   overflow-y: scroll;
-  height: 70%;
+  height: 500px;
+  margin-bottom: 30px;
 }
 
 .question-ans a{
@@ -554,7 +533,6 @@ nav{
 
 .avgr{
   text-transform: uppercase;
-  margin-top: -20px;
   margin-bottom: 10px;
   display: block;
 }
@@ -583,3 +561,67 @@ margin-bottom: -10px;
 margin-top: 14px;
 }
 
+.default{
+  margin-top: 30px;
+  background-color: #717171;
+  padding: 5px 5px;
+  color: white;
+}
+
+footer{
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  text-align: center;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.7;
+}
+
+.fa-heart{
+  color: red;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+/* Style the links inside the navigation bar */
+.search{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  height: 50px;
+}
+
+.search form{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.search input{
+  border-radius: 30px;
+  margin-top: -50px;
+  width: 486px;
+  height: 40px;
+  padding: 5px;
+  font-size: 17px;
+  margin-right: 35px;
+  border: 1px solid grey;
+}
+
+@media (max-width: 858px){
+  .search input{
+    margin-top: -20px;
+    width: 60%;
+    margin-left: 10px;
+  }
+
+}
