--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,13 +2,12 @@
 <link rel="stylesheet" href="/styles/star.css">
 <link rel="stylesheet" href="/styles/question.css">
 
+<div class="container-qs">
+    <h2  style="text-align: center; color: #777;""><%= clg.NameoftheCollege %></h2>
     <div class="container-show">
     <div class="show-clg">
-    <!-- <div class="show-clg-head"> -->
     <div class="slideshow-container">
-    <% for(let img of clg.img) { %> 
-
-        <!-- Full-width images with number and caption text -->
+    <% for(let img of clg.img) { %>
         <div class="mySlides fade">
           <img src="<%=img.url%>" >
         </div>  
@@ -20,9 +19,8 @@
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
     <% } %> 
 </div>
-    <!-- </div> -->
     <div class="show-clg-body"> 
-    <h4><%= clg.NameoftheCollege %></h4>
+    <!-- <h4><%= clg.NameoftheCollege %></h4> -->
     <p1><span>Address: </span><%= clg.Address %></p1>
     <p1><span>Name of the prinicple: </span><%= clg.NameofthePrincipal %></p1>
     <p1><span>Phonenumber: </span><%= clg.PhoneNumber%></p1>
@@ -35,14 +33,17 @@
     <p1><span>Type: </span><%= clg.Type%></p1>
     <p1><span>MinorityStatus: </span><%= clg.MinorityStatus%></p1>
    
-    <p1><span>ExistingCourses: </span><% for(let a of clg.ExistingCourses) {%>
-         <p><%= a %> </p>
-         <% } %> 
-     </p1>
+    <h3>ExistingCourses: </h3>
+    <ul>
+    <% for(let a of clg.ExistingCourses) {%>
+        <li><%= a %> </li>
+       <% } %> 
+    </ul>
     </div> 
     </div>
 
 
+    <h3 class="default">Reviews</h3>
     <div class="star-box">
     <% if(!currentUser) {%>
       <p class="signin">sign in to leave a rating :)</p>
@@ -55,10 +56,6 @@
       <span class="avgr">avg ratin:<span class="customstar">&#9733;</span><%= avgrating %>(<%=totalRating%>)</span>
       <h2>Leave a Review</h2>
       <form action="/colledge/<%=clg._id%>/reviews" method="POST" >
-          <!-- <div class="mb-3">
-              <label class="form-label" for="rating">Rating</label>
-              <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
-          </div> -->
           <fieldset class="starability-basic">
               <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
                   aria-label="No rating." />
@@ -80,12 +77,24 @@
           <button class="btn btn-success">Submit</button>
       </form>
       <% } %>
-      <div class="reviewcon">
+      <% if(clg.reviews.length === 0) {%> 
+        <h5>Sorry No review to display</h5> 
+        <div style="margin-top: 10px;">
+      <% } %> 
+      <% if(clg.reviews.length < 3 && clg.reviews.length > 0 ) {%> 
+        <div>
+        <% } %> 
+        <% if(clg.reviews.length > 3) {%> 
+          <div class="reviewcon">
+          <% } %> 
       <% for(let review of clg.reviews) { %>
             <div class="card-body-2">
-              
-             <div class="procondainer" style="margin-bottom: 15px;"><div class="propic" ><%= review.author.name[0].toUpperCase() %></div><b style="margin-left: 5px;"> <%= review.author.name %></b></div>
-
+             <div class="procondainer" style="margin-bottom: 15px;">
+              <div class="propic" >
+                <%= review.author.name[0].toUpperCase() %>
+              </div>
+              <b style="margin-left: 5px;"> <%= review.author.name %></b>
+            </div>
                 <p class="starability-result" data-rating="<%=review.rating%>">
                     Rated: <%= review.rating %> stars
                 </p>
@@ -105,6 +114,7 @@
   <div class="mapContainer">
   <div class="question-sec">
     <div class="qsform">
+    <h3 class="default">Question Section</h3>
       <% if(!currentUser) {%>
         <p class="signin" style="margin-left: 10px;">sign in to leave a question :)</p>
         <% } %>  
@@ -116,7 +126,16 @@
     </form>
     <% } %> 
   </div>
-  <div class="question-ans">
+  <%if(clg.question.length === 0) {%>
+    <div>
+      <h3>Sorry :) No Question to Show </h3>
+    <%}  %> 
+    <%if(clg.question.length < 4 && clg.question.length > 0) {%>
+      <div>
+    <% } %> 
+    <%if(clg.question.length > 4 ) {%>
+    <div class="question-ans">
+      <% } %> 
     <% for(let qns of clg.question) { %>
       <div class="procondainer"><div class="propic" ><%= qns.author.name[0].toUpperCase() %></div><b style="margin-left: 5px;"> <%= qns.author.name %></b></div>
       <p><%= qns.question %></p>
@@ -144,6 +163,7 @@
 <a href="/colledge/<%=clg._id%>/Edit">edit</a>
 <% } %>
 
+</div>
 </div>
 <script>
     var slideIndex = 1;
@@ -178,7 +198,7 @@ function showSlides(n) {
    
 <script>
   let name="<%=clg.NameoftheCollege%>"
-  mapboxgl.accessToken = 'pk.eyJ1IjoiYXJ1bm1hbmkiLCJhIjoiY2tqbzZhb3R3MDZlMjJzbzVkeG1zYzZueSJ9.mZFqpmFOtpXoBVFJUqSLeg';
+  mapboxgl.accessToken = 'pk.eyJ1IjoiYXJ1bm1hbmkiLCJhIjoiY2tycDFlZW5zMWxxaTJvbDdzN3JidGc3diJ9.dWRXr-fSAnj1HbaYMnxFgg'
   var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/navigation-guidance-day-v4',
