ready to deploy

--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -20,7 +20,7 @@
         </label>
         <label class="logo"></label>
         <ul class="ul-header">
-          <li><a href="/colledge" >colledges</a></li>
+          <li><a href="/colledge" >colleges</a></li>
           <li><a href="/">home</a></li>
           <% if(!currentUser) {%>
             <li><a href="/login">login</a></li>
