--- a/public/styles/style3.css
+++ b/public/styles/style3.css
@@ -617,6 +617,10 @@ footer{
   border: 1px solid grey;
 }
 
+.search input{
+  outline: none;
+}
+
 @media (max-width: 858px){
   .search input{
     margin-top: -20px;
